--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=cabcc1f93acb72bab319",
+    "/css/app.css": "/css/app.css?id=4b25d3ec6defdea67341"
 }
